Deleting cruft 1